--- a/index.html
+++ b/index.html
@@ -30,5 +30,33 @@
         </div>
       </div>
     </div>
+	
+	<div id="myCarousel" class="carousel slide">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Matematika Itu Mudah..</h1>
+              <p>Untuk mempelajari matematika berlatihlah seperti layaknya bayi, tengkurap, merangkak, berdiri, berjalan dan berlari, setelah dewasa dia tidak akan pernah lupa apa yang pernah dilakukannya.</p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Tentang Kami..</h1>
+              <p>Kami adalah seseorang yang bisa disebut sebagai pemuda yang rajin belajar dan selalu ingin mengetahui hal hal yang baru. :D</p>  
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div>
 </body>
 </html>
