--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
-	<meta charset="UTF-8">	<meta name="viewport" content="width=device-width, initial-scale=1.0">	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">	<meta name="google-site-verification" content="YG-kagsf5psFolLyFMW1-LeqrYVRWM1gwbFWE7Mj1lM" />	<title>Selamat Datang di Web Kami...</title>	<link rel="stylesheet" href="css/bootstrap.css" />	<link rel="stylesheet" href="css/font.css" />	<link rel="stylesheet" href="css/style.css" />	<link rel="stylesheet" href="css/carousel.css" />	<link rel="stylesheet" href="css/ukuran.css" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="google-site-verification" content="YG-kagsf5psFolLyFMW1-LeqrYVRWM1gwbFWE7Mj1lM" />
+	<title>Selamat Datang di Web Kami...</title>
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/font.css" />
+	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/carousel.css" />
+	<link rel="stylesheet" href="css/ukuran.css" />
 </head>
 <body>
 	<div class="navbar-wrapper">
@@ -106,7 +115,8 @@
 					</div>
 					
 					<div id="col-md-9">
-						
+                    <h2> Pengertian Bilangan Bulat </h2>
+					<p>Coba kalian ingat kembali materi di tingkat sekolah dasar mengenai bilangan cacah. Bilangan cacah yaitu 0, 1, 2, 3, .... Jika bilangan cacah tersebut digambarkan pada suatu garis bilangan, apa yang kalian peroleh? Seseorang berdiri di atas lantai berpetak. Ia memilih satu garis lurus yang menghubungkan petak-petak lantai tersebut. Ia berdiri di satu titik dan ia namakan titik 0.</p>	
 					</div>
 				 </div>
 				</div>
