--- a/index.html
+++ b/index.html
@@ -70,24 +70,24 @@
 	
 	<div class="container">
 		<div class="row">
-			<div class="col-md-2 ukuran" id="satu"><a class="fonta" data-toggle="modal" href="#onemodal">Bilangan Bulat</a></div>
-			<div class="col-md-2 ukuran" id="dua"><a class="fonta" href="" data-toggle="modal" data-target="#twomodal">Lingkaran</a></div>
-			<div class="col-md-2 ukuran" id="tiga"><a class="fonta" href=""  data-toggle="modal" data-target="#threemodal">Segitiga</a></div>
-			<div class="col-md-2 ukuran" id="empat"><a class="fonta" href=""  data-toggle="modal" data-target="#fourmodal">Peluang</a></div>
-			<div class="col-md-2 ukuran" id="lima"><a class="fonta" href=""  data-toggle="modal" data-target="#fivemodal">Bangun Datar</a></div>
-			<div class="col-md-2 ukuran" id="enam"><a class="fonta" href=""  data-toggle="modal" data-target="#sixmodal">Perbandingan</a></div>
-			<div class="col-md-2 ukuran" id="tujuh"><a class="fonta" href=""  data-toggle="modal" data-target="#sevenmodal">Bentuk Aljabar</a></div>
-			<div class="col-md-2 ukuran" id="lapan"><a class="fonta" href=""  data-toggle="modal" data-target="#eightmodal">Himpunan</a></div>
-			<div class="col-md-2 ukuran" id="sem"><a class="fonta" href=""  data-toggle="modal" data-target="#ninemodal">Garis Dan Sudut</a></div>
-			<div class="col-md-2 ukuran" id="sep"><a class="fonta" href=""  data-toggle="modal" data-target="#tenmodal">Relasi Dan Fungsi</a></div>
-			<div class="col-md-2 ukuran" id="sebelas"><a class="fonta" href=""  data-toggle="modal" data-target="#elevenmodal">Bangun Ruang Sisi Datar</a></div>
-			<div class="col-md-2 ukuran" id="duabelas"><a class="fonta" href=""  data-toggle="modal" data-target="#twelvemodal">Bangun Ruang Sisi Lengkung</a></div>
-			<div class="col-md-2 ukuran" id="tigabelas"><a class="fonta" href=""  data-toggle="modal" data-target="#thirteenmodal">Persamaan Dan Pertidaksamaan</a></div>
+			<div class="col-md-2 ukuran" id="satu"><a class="fonta" data-toggle="modal" href="#onemodal">Bilangan Bulat</a><img src="img/logo/bilanganbulat-logo.ico" alt="bilanganbulat" /></div>
+			<div class="col-md-2 ukuran" id="dua"><a class="fonta" href="" data-toggle="modal" data-target="#twomodal">Lingkaran</a><img src="img/logo/lingkaran-logo.ico" alt="lingkaran-logo" /></div>
+			<div class="col-md-2 ukuran" id="tiga"><a class="fonta" href=""  data-toggle="modal" data-target="#threemodal">Segitiga</a><img src="img/logo/segitiga-logo.ico" alt="segitiga-logo" /></div>
+			<div class="col-md-2 ukuran" id="empat"><a class="fonta" href=""  data-toggle="modal" data-target="#fourmodal">Peluang</a><img src="img/logo/probability.ico" alt="probability" /></div>
+			<div class="col-md-2 ukuran" id="lima"><a class="fonta" href=""  data-toggle="modal" data-target="#fivemodal">Bangun Datar</a><img src="img/logo/bangunruangsisidatar-logo.ico" alt="bangunruangsisidatar-logo" /></div>
+			<div class="col-md-2 ukuran" id="enam"><a class="fonta" href=""  data-toggle="modal" data-target="#sixmodal">Perbandingan</a><img src="img/logo/perbandingan-logo.ico" alt="perbandingan-logo" /></div>
+			<div class="col-md-2 ukuran" id="tujuh"><a class="fonta" href=""  data-toggle="modal" data-target="#sevenmodal">Bentuk Aljabar</a><img src="img/logo/aljabar-logo.ico" alt="aljabar-logo" /></div>
+			<div class="col-md-2 ukuran" id="lapan"><a class="fonta" href=""  data-toggle="modal" data-target="#eightmodal">Himpunan</a><img src="img/logo/himpunan-logo.ico" alt="himpunan-logo" /></div>
+			<div class="col-md-2 ukuran" id="sem"><a class="fonta" href=""  data-toggle="modal" data-target="#ninemodal">Garis Dan Sudut</a><img src="img/logo/sudut-logo.ico" alt="sudut-logo" /></div>
+			<div class="col-md-2 ukuran" id="sep"><a class="fonta" href=""  data-toggle="modal" data-target="#tenmodal">Relasi Dan Fungsi</a><img src="img/logo/relasi-logo.ico" alt="relasi-logo" /></div>
+			<div class="col-md-2 ukuran" id="sebelas"><a class="fonta" href=""  data-toggle="modal" data-target="#elevenmodal">Bangun Ruang Sisi Datar</a><img src="img/logo/bangunruangsisidatar-logo.ico" alt="bangunruangsisidatar-logo" /></div>
+			<div class="col-md-2 ukuran" id="duabelas"><a class="fonta" href=""  data-toggle="modal" data-target="#twelvemodal">Bangun Ruang Sisi Lengkung</a><img src="img/logo/bangunruangsisilengkung-logo.ico" alt="bangunruangsisilengkung-logo" /></div>
+			<div class="col-md-2 ukuran" id="tigabelas"><a class="fonta" href=""  data-toggle="modal" data-target="#thirteenmodal">Persamaan Dan Pertidaksamaan</a><img src="img/logo/persamaanpertidaksamaan-logo.ico" alt="persamaanpertidaksamaan-logo" /></div>
 			<div class="col-md-2 ukuran" id="empatbelas"><a class="fonta" href=""  data-toggle="modal" data-target="#fourteenmodal">Persamaan Garis Lurus</a></div>
-			<div class="col-md-2 ukuran" id="limabelas"><a class="fonta" href=""  data-toggle="modal" data-target="#fivteenmodal">Bilangan Berpangkat</a></div>
-			<div class="col-md-2 ukuran" id="enambelas"><a class="fonta" href=""  data-toggle="modal" data-target="#sixteenmodal">Baris Bilangan Dan Deret</a></div>
-			<div class="col-md-2 ukuran" id="tujuhbelas"><a class="fonta" href=""  data-toggle="modal" data-target="#seventeenmodal">Kesebangunan dan Kongruensi</a></div>
-			<div class="col-md-2 ukuran" id="lapanbelas"><a class="fonta" href="" data-toggle="modal" data-target="#eightteenmodal">Persamaan Linear Dua Variabel</a></div>
+			<div class="col-md-2 ukuran" id="limabelas"><a class="fonta" href=""  data-toggle="modal" data-target="#fivteenmodal">Bilangan Berpangkat</a><img src="img/logo/kotak.ico" alt="kotak" /></div>
+			<div class="col-md-2 ukuran" id="enambelas"><a class="fonta" href=""  data-toggle="modal" data-target="#sixteenmodal">Baris Bilangan Dan Deret</a><img src="img/logo/deret-logo.ico" alt="deret-logo" /></div>
+			<div class="col-md-2 ukuran" id="tujuhbelas"><a class="fonta" href=""  data-toggle="modal" data-target="#seventeenmodal">Kesebangunan dan Kongruensi</a><img src="img/logo/kesebangunan-logo.ico" alt="kesebangunan-logo" /></div>
+			<div class="col-md-2 ukuran" id="lapanbelas"><a class="fonta" href="" data-toggle="modal" data-target="#eightteenmodal">Persamaan Linear Dua Variabel</a><img src="img/logo/persamaanlinear-logo.ico" alt="persamaanlinear-logo" /></div>
 		</div>
 	</div>
 	<div class="container">
