--- a/index.html
+++ b/index.html
@@ -70,24 +70,24 @@
 	
 	<div class="container">
 		<div class="row">
-			<div class="col-md-2 ukuran" id="satu"><a class="fonta" data-toggle="modal" href="#onemodal">Bilangan Bulat</a><img src="img/logo/bilanganbulat-logo.ico" alt="bilanganbulat" /></div>
-			<div class="col-md-2 ukuran" id="dua"><a class="fonta" href="" data-toggle="modal" data-target="#twomodal">Lingkaran</a><img src="img/logo/lingkaran-logo.ico" alt="lingkaran-logo" /></div>
-			<div class="col-md-2 ukuran" id="tiga"><a class="fonta" href=""  data-toggle="modal" data-target="#threemodal">Segitiga</a><img src="img/logo/segitiga-logo.ico" alt="segitiga-logo" /></div>
-			<div class="col-md-2 ukuran" id="empat"><a class="fonta" href=""  data-toggle="modal" data-target="#fourmodal">Peluang</a><img src="img/logo/probability.ico" alt="probability" /></div>
-			<div class="col-md-2 ukuran" id="lima"><a class="fonta" href=""  data-toggle="modal" data-target="#fivemodal">Bangun Datar</a><img src="img/logo/bangunruangsisidatar-logo.ico" alt="bangunruangsisidatar-logo" /></div>
-			<div class="col-md-2 ukuran" id="enam"><a class="fonta" href=""  data-toggle="modal" data-target="#sixmodal">Perbandingan</a><img src="img/logo/perbandingan-logo.ico" alt="perbandingan-logo" /></div>
-			<div class="col-md-2 ukuran" id="tujuh"><a class="fonta" href=""  data-toggle="modal" data-target="#sevenmodal">Bentuk Aljabar</a><img src="img/logo/aljabar-logo.ico" alt="aljabar-logo" /></div>
-			<div class="col-md-2 ukuran" id="lapan"><a class="fonta" href=""  data-toggle="modal" data-target="#eightmodal">Himpunan</a><img src="img/logo/himpunan-logo.ico" alt="himpunan-logo" /></div>
-			<div class="col-md-2 ukuran" id="sem"><a class="fonta" href=""  data-toggle="modal" data-target="#ninemodal">Garis Dan Sudut</a><img src="img/logo/sudut-logo.ico" alt="sudut-logo" /></div>
-			<div class="col-md-2 ukuran" id="sep"><a class="fonta" href=""  data-toggle="modal" data-target="#tenmodal">Relasi Dan Fungsi</a><img src="img/logo/relasi-logo.ico" alt="relasi-logo" /></div>
-			<div class="col-md-2 ukuran" id="sebelas"><a class="fonta" href=""  data-toggle="modal" data-target="#elevenmodal">Bangun Ruang Sisi Datar</a><img src="img/logo/bangunruangsisidatar-logo.ico" alt="bangunruangsisidatar-logo" /></div>
-			<div class="col-md-2 ukuran" id="duabelas"><a class="fonta" href=""  data-toggle="modal" data-target="#twelvemodal">Bangun Ruang Sisi Lengkung</a><img src="img/logo/bangunruangsisilengkung-logo.ico" alt="bangunruangsisilengkung-logo" /></div>
-			<div class="col-md-2 ukuran" id="tigabelas"><a class="fonta" href=""  data-toggle="modal" data-target="#thirteenmodal">Persamaan Dan Pertidaksamaan</a><img src="img/logo/persamaanpertidaksamaan-logo.ico" alt="persamaanpertidaksamaan-logo" /></div>
-			<div class="col-md-2 ukuran" id="empatbelas"><a class="fonta" href=""  data-toggle="modal" data-target="#fourteenmodal">Persamaan Garis Lurus</a></div>
-			<div class="col-md-2 ukuran" id="limabelas"><a class="fonta" href=""  data-toggle="modal" data-target="#fivteenmodal">Bilangan Berpangkat</a><img src="img/logo/kotak.ico" alt="kotak" /></div>
-			<div class="col-md-2 ukuran" id="enambelas"><a class="fonta" href=""  data-toggle="modal" data-target="#sixteenmodal">Baris Bilangan Dan Deret</a><img src="img/logo/deret-logo.ico" alt="deret-logo" /></div>
-			<div class="col-md-2 ukuran" id="tujuhbelas"><a class="fonta" href=""  data-toggle="modal" data-target="#seventeenmodal">Kesebangunan dan Kongruensi</a><img src="img/logo/kesebangunan-logo.ico" alt="kesebangunan-logo" /></div>
-			<div class="col-md-2 ukuran" id="lapanbelas"><a class="fonta" href="" data-toggle="modal" data-target="#eightteenmodal">Persamaan Linear Dua Variabel</a><img src="img/logo/persamaanlinear-logo.ico" alt="persamaanlinear-logo" /></div>
+			<a class="fonta" data-toggle="modal" href="#onemodal"><div class="col-md-2 ukuran" id="satu"><p id="semb">Bilangan Bulat</p><img src="img/logo/bilanganbulat-logo.ico" alt="bilanganbulat" /></div></a>
+			<a class="fonta" href="" data-toggle="modal" data-target="#twomodal"><div class="col-md-2 ukuran" id="dua"><p id="semb">Lingkaran</p><img src="img/logo/lingkaran-logo.ico" alt="lingkaran-logo" /></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#threemodal"><div class="col-md-2 ukuran" id="tiga"><p id="semb">Segitiga</p><img src="img/logo/segitiga-logo.ico" alt="segitiga-logo" /></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#fourmodal"><div class="col-md-2 ukuran" id="empat"><p id="semb">Peluang</p><img src="img/logo/probability.ico" alt="probability" /></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#fivemodal"><div class="col-md-2 ukuran" id="lima"><p id="semb">Bangun Datar</p><img src="img/logo/bangunruangsisidatar-logo.ico" alt="bangunruangsisidatar-logo" /></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#sixmodal"><div class="col-md-2 ukuran" id="enam"><p id="semb">Perbandingan</p><img src="img/logo/perbandingan-logo.ico" alt="perbandingan-logo" /></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#sevenmodal"><div class="col-md-2 ukuran" id="tujuh"><p id="semb">Bentuk Aljabar</p><img src="img/logo/aljabar-logo.ico" alt="aljabar-logo" /></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#eightmodal"><div class="col-md-2 ukuran" id="lapan"><p id="semb">Himpunan</p><img src="img/logo/himpunan-logo.ico" alt="himpunan-logo" /></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#ninemodal"><div class="col-md-2 ukuran" id="sem"><p id="semb">Garis Dan Sudut</p><img src="img/logo/sudut-logo.ico" alt="sudut-logo" /></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#tenmodal"><div class="col-md-2 ukuran" id="sep"><p id="semb">Relasi Dan Fungsi</p><img src="img/logo/relasi-logo.ico" alt="relasi-logo" /></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#elevenmodal"><div class="col-md-2 ukuran" id="sebelas"><p id="semb">Bangun Ruang Sisi Datar</p><img src="img/logo/bangunruangsisidatar-logo.ico" alt="bangunruangsisidatar-logo" /></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#twelvemodal"><div class="col-md-2 ukuran" id="duabelas"><p id="semb">Bangun Ruang Sisi Lengkung</p><img src="img/logo/bangunruangsisilengkung-logo.ico" alt="bangunruangsisilengkung-logo" /></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#thirteenmodal"><div class="col-md-2 ukuran" id="tigabelas"><p id="semb">Persamaan Dan Pertidaksamaan</p><img src="img/logo/persamaanpertidaksamaan-logo.ico" alt="persamaanpertidaksamaan-logo" /></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#fourteenmodal"><div class="col-md-2 ukuran" id="empatbelas"><p id="semb">Persamaan Garis Lurus</p></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#fivteenmodal"><div class="col-md-2 ukuran" id="limabelas"><p id="semb">Bilangan Berpangkat</p><img src="img/logo/kotak.ico" alt="kotak" /></div></a>
+			<a class="fonta" href=""  data-toggle="modal" data-target="#sixteenmodal"><div class="col-md-2 ukuran" id="enambelas"><p id="semb">Baris Bilangan Dan Deret</p><img src="img/logo/deret-logo.ico" alt="deret-logo" /></div><a class="fonta" href=""  data-toggle="modal" data-target="#sixteenmodal">
+			<a class="fonta" href=""  data-toggle="modal" data-target="#seventeenmodal"><div class="col-md-2 ukuran" id="tujuhbelas"><p id="semb">Kesebangunan dan Kongruensi</p><img src="img/logo/kesebangunan-logo.ico" alt="kesebangunan-logo" /></div></a>
+			<a class="fonta" href="" data-toggle="modal" data-target="#eightteenmodal"><div class="col-md-2 ukuran" id="lapanbelas"><p id="semb">Persamaan Linear Dua Variabel</p><img src="img/logo/persamaanlinear-logo.ico" alt="persamaanlinear-logo" /></div></a>
 		</div>
 	</div>
 	<div class="container">
@@ -115,8 +115,7 @@
 					</div>
 					
 					<div id="col-md-9">
-                    <h2> Pengertian Bilangan Bulat </h2>
-					<p>Coba kalian ingat kembali materi di tingkat sekolah dasar mengenai bilangan cacah. Bilangan cacah yaitu 0, 1, 2, 3, .... Jika bilangan cacah tersebut digambarkan pada suatu garis bilangan, apa yang kalian peroleh? Seseorang berdiri di atas lantai berpetak. Ia memilih satu garis lurus yang menghubungkan petak-petak lantai tersebut. Ia berdiri di satu titik dan ia namakan titik 0.</p>	
+                    <embed src="doc/7/MTK. KLS 7 BAB 1. BILANGAN BULAT.pdf" width="800" height="500">	</embed>
 					</div>
 				 </div>
 				</div>
