--- a/index.html
+++ b/index.html
@@ -117,8 +117,173 @@
 					<div class="col-md-9">
 						<div id="whywhy">
 							<p>
-								 aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf 
-							</p>
+								 <h3 class='post-title entry-title' itemprop='name'>
+BILANGAN BULAT
+</h3>
+<div class='post-header'>
+<div class='post-header-line-1'></div>
+</div>
+<div class='post-body entry-content' id='post-body-5863749452345253856' itemprop='articleBody'>
+<u><b>BILANGAN BULAT</b></u><br />
+<br />
+Himpunan bilangan bulat adalah himpunan bilangan yang terdiri dari himpunan bilangan positif (bilangan asli), bilangan nol, dan bilangan bulat negatif.<br />
+<br />
+<b>URUTAN BILANGAN BULAT</b><br />
+Perhatikan gambar berikut.<br />
+<br />
+<div class="separator" style="clear: both; text-align: center;">
+<a href="http://3.bp.blogspot.com/-aRRxDYwwBRk/T6OMwog2flI/AAAAAAAAABg/4bVDDHg3cMA/s1600/Mat_2.png" imageanchor="1" style="margin-left: 1em; margin-right: 1em;"><img border="0" height="66" src="http://3.bp.blogspot.com/-aRRxDYwwBRk/T6OMwog2flI/AAAAAAAAABg/4bVDDHg3cMA/s400/Mat_2.png" width="400" /></a></div>
+dari gambar di atas kamu akan menemukan bahwa semakin ke kanan, bilangan bulat pada garis bilangan tersebut semakin besar, sebaliknya semakin ke kiri, bilangan bulat pada garis bilangan semakin kecil. Misalnya:<br />
+<ul>
+<li>-2 terletak di sebelah kiri 0 sehingga -2 &lt; 0;</li>
+<li>0 terletak di sebelah kanan -1 sehingga 0 &gt; -1;</li>
+<li>-5 terletak di sebelah kiri -3 sehingga -5 &lt; -3;</li>
+<li>-4 terletak di sebelah kanan -6 sehingga -4 &gt; -6.</li>
+</ul>
+<b>LAWAN BILANGAN BULAT</b> <br />
+<ul>
+<li>Setiap bilangan bulat mempunyai tepat satu lawan yang juga merupakan bilangan bulat</li>
+<li>Dua bilangan bulat dikatakan berlawanan, apabila dijumlahkan menghasilkan nilai nol.<br />a + (-a) = 0</li>
+</ul>
+Misalnya :<br />
+<ol>
+<li>Lawan dari 4 adalah -4, sebab 4 + (-4) = 0</li>
+<li>Lawan dari -7 adalah 7, sebab -7 + 7 = 0</li>
+<li>Lawan dari -2 adalah 2, sebab -2 + 2 = 0</li>
+<li>Lawan dari 3 adalah -3, sebab 3 + (-3) = 0</li>
+<li>Lawan dari 10 adalah -10, sebab 10 + (-10) = 0</li>
+<li>Lawan dari 0 adalah 0, sebab 0 + 0 = 0</li>
+</ol>
+<b>OPERASI BILANGAN BULAT</b><br />
+<b>Penjumlahan dan Pengurangan Bilangan Bulat</b><br />
+<div class="separator" style="clear: both; text-align: center;">
+<a href="http://2.bp.blogspot.com/-RO4DaAxpxtk/T6ORNzMtDeI/AAAAAAAAABs/dPclMNg6vVk/s1600/Mat_3.png" imageanchor="1" style="margin-left: 1em; margin-right: 1em;"><img border="0" height="400" src="http://2.bp.blogspot.com/-RO4DaAxpxtk/T6ORNzMtDeI/AAAAAAAAABs/dPclMNg6vVk/s400/Mat_3.png" width="380" /></a></div>
+d. Menjumlahkan bilangan bulat negatif dengan bilangan positif.<br />
+Misalnya :<br />
+-5 + 8 = 3<br />
+-4 + 9 = 5<br />
+<br />
+<b>Perkalian Bilangan Bulat</b><br />
+Perkalian adalah penjumlahan berulang sebanyak bilangan yang dikalikan.<br />
+Contoh :<br />
+2 x 4 = 4 + 4 = 8<br />
+3 x 5 = 5 + 5 + 5 = 15<br />
+<br />
+<b>Sifat-sifat perkalian suatu bilangan</b><br />
+<br />
+a. Perkalian bilangan positif dengan bilangan positif, hasilnya positif.<br />
+Contoh:<br />
+1) 4 x 5 = 5 + 5 + 5 + 5 = 20<br />
+2) 7 x 8 = 56<br />
+3) 12 x 15 = 180<br />
+b Perkalian bilangan positif dengan bilangan negatif, hasilnya negatif.<br />
+&nbsp;&nbsp; Contoh:<br />
+&nbsp;&nbsp;&nbsp; 1) 4 x (-5) = (-5) + (-5) +(-5) +(-5) = -20<br />
+&nbsp;&nbsp;&nbsp; 2) 7 x (-8) = -56<br />
+&nbsp;&nbsp;&nbsp; 3) 12 x (-15) = -180<br />
+c. Perkalian bilangan negatif dengan bilangan positif, hasilnya negatif.<br />
+&nbsp;&nbsp;&nbsp; Contoh:<br />
+&nbsp;&nbsp;&nbsp; 1) -4 x 5 = -(5 + 5 + 5 + 5) = -20.<br />
+&nbsp;&nbsp;&nbsp; 2) -7 x 8 = -56<br />
+&nbsp;&nbsp;&nbsp; 3) -12x 15 = -180<br />
+d. Perkalian bilangan negatif dengan bilangan negatif, hasilnya positif.<br />
+&nbsp;&nbsp;&nbsp; Contoh:<br />
+&nbsp;&nbsp;&nbsp; 1) -4 x (-5) = -[-5 + (-5) + (-5) + (-5)] = -[-20] = 20<br />
+&nbsp;&nbsp;&nbsp; 2) -7 x (-8) = 56<br />
+&nbsp;&nbsp;&nbsp; 3) -12 x (-15) = 180<br />
+<br />
+<span class="mw-headline"> <b>Pembagian bilangan bulat</b><br />  </span><br />
+Pembagian merupakan operasi kebalikan dari perkalian<br />
+Contoh<br />
+12&nbsp;: 4 = 3, karena 4 x 3 = 12 atau 3 x 4 = 12<br />
+42&nbsp;: 7 = 6, karena 7 x 6 = 42 atau 6 x 7 = 42 
+<br />
+<br />
+Sifat-sifat pembagian bilangan bulat<br />
+a. Pembagian bilangan positif dengan bilangan positif, hasilnya positif<br />
+&nbsp;&nbsp;&nbsp; Contoh<br />
+&nbsp;&nbsp;&nbsp; 1) 63&nbsp;: 7 = 9<br />
+&nbsp;&nbsp;&nbsp; 2) 143&nbsp;: 11 = 13<br />
+b. Pembagian bilangan positif dengan bilangan negatif, hasilnya negatif<br />
+&nbsp;&nbsp;&nbsp; Contoh:<br />
+&nbsp;&nbsp;&nbsp; 1) 63&nbsp;: (-9) = -7<br />
+&nbsp;&nbsp;&nbsp; 2) 72&nbsp;: (-6) = -12<br />
+c. Pembagian bilangan negatif dengan bilangan positif, hasilnya negatif<br />
+&nbsp;&nbsp;&nbsp; Contoh:<br />
+&nbsp;&nbsp;&nbsp; 1) -63&nbsp;: 7 = -9<br />
+&nbsp;&nbsp;&nbsp; 2) -120&nbsp;: 10 = -12<br />
+d. Pembagian bilangan negatif dengan bilangan negatif, hasilnya positif.<br />
+&nbsp;&nbsp;&nbsp; Contoh:<br />
+&nbsp;&nbsp;&nbsp; 1) -72&nbsp;: (-8) = 9<br />
+&nbsp;&nbsp;&nbsp; 2) -120&nbsp;: (-12) = 10<br />
+<h2>
+
+
+
+
+
+<span class="mw-headline">Sifat Operasi Hitung Bilangan Bulat<br />  </span></h2>
+<a href="http://www.blogger.com/blogger.g?blogID=7937344352095861785" name="Sifat_komutatif"></a> <span class="mw-headline"> <b>Sifat komutatif</b><br />  </span><br />
+Sifat komutatif (pertukaran) pada penjumlahan dan perkalian.<br />
+a + b = b + a<br />
+a x b = b x a, berlaku untuk semua bilangan bulat 
+<br />
+<br />
+Contoh:<br />
+1) 2 + 4 = 4 + 2 = 6<br />
+2) 3 + 5 = 5 + 3 = 8<br />
+3) 4 x 2 = 2 x 4 = 8<br />
+4) 3 x 2 = 2 x 3 = 6<br />
+<br />
+<a href="http://www.blogger.com/blogger.g?blogID=7937344352095861785" name="Sifat_asosiatif"></a> <span class="mw-headline"> <b>&nbsp;</b></span><br />
+<span class="mw-headline"><b>Sifat asosiatif</b><br />  </span><br />
+Sifat asosiatif (pengelompokan) pada penjumlahan dan perkalian.<br />
+(a + b) + c = a + (b+c)<br />
+(a x b) x c = a x (bxc), berlaku untuk semua bilangan bulat 
+<br />
+Contoh:<br />
+1) (2+4) + 6 = 2 + (4+6) = 12<br />
+2) (3+6) + 7 = 3 + (6+7) = 16<br />
+3) (3x2) x 4 = 3 x (2x4) = 24<br />
+4) (3x5) x 2 = 3 x (5x2) = 30<br />
+<br />
+<a href="http://www.blogger.com/blogger.g?blogID=7937344352095861785" name="Sifat_distributif_.28penyebaran.29"></a> <span class="mw-headline"> <b>&nbsp;</b></span><br />
+<span class="mw-headline"><b>Sifat distributif (penyebaran)</b><br />  </span><br />
+a x (b + c) = (a x b) + (a x c), yang berlaku untuk semua bilangan bulat. 
+<br />
+Contoh<br />
+1) 4 x (5 + 2) = (4 x 5) + (4 x 2) = 28<br />
+2) 5 x (7 + 3) = (5 x 7) + (5 x 3) = 50<br />
+<br />
+<a href="http://www.blogger.com/blogger.g?blogID=7937344352095861785" name="Operasi_Campuran"></a> <span class="mw-headline">&nbsp;</span><br />
+<span class="mw-headline"><b>Operasi Campuran</b><br />  </span><br />
+Aturan dalam mengerjakan operasi campuran adalah sebagai berikut.<br />
+1 .Operasi dalam tanda kurung dikerjakan terlebih dahulu.<br />
+2. Perkalian dan pembagian adalah setara, yang ditemui terlebih dahulu dikerjakan terlebih dahulu.<br />
+3. Penjumlahan dan pengurangan adalah setara, yang ditemui terlebih dahulu dikerjakan terlebih dahulu.<br />
+4. Perkalian atau pembagian dikerjakan lebih dahulu daripada penjumlahan atau<br />
+&nbsp;&nbsp;&nbsp; pengurangan. 
+<br />
+<br />
+Contoh<br />
+1. a. 20 + 30 &#8211; 12 = 50 &#8211; 12 = 38<br />
+&nbsp;&nbsp;&nbsp; b. 40 &#8211; 10 - 5 = 30 &#8211; 5 = 25<br />
+&nbsp;&nbsp;&nbsp; c. 40 - (10 - 5) = 40 &#8211; 5 = 35&nbsp; 
+<br />
+<br />
+2. a. 600&nbsp;: 2O&nbsp;: 5 = 30&nbsp;: 5 = 6 <br />
+&nbsp;&nbsp;&nbsp; b. 600&nbsp;: (20&nbsp;: 5) = 600&nbsp;: 4 = 150<br />
+&nbsp;&nbsp;&nbsp; c. 5 x 8&nbsp;: 4 = 40&nbsp;: 4 = 10 
+<br />
+<br />
+3. a. 5 x (8 + 4) = 5 x 12 = 60<br />
+&nbsp;&nbsp;&nbsp; b. 5 x 8 -4 = 40 &#8211; 4 = 36<br />
+&nbsp;&nbsp;&nbsp; c. 5 x (8 &#8211; 4) = 5 x 4 = 20 
+<br />
+&nbsp; <br />
+</div>
+
+							
 						</div>
 					</div>
 				 </div>
