--- a/index.html
+++ b/index.html
@@ -302,21 +302,77 @@
 					<div class="col-md-3 sidebar-offcanvas" id="sidebar" role="navigation">
 					  <div class="well sidebar-nav">
 						<ul class="nav">
-						  <li><a href="#">Apa itu Lingkaran?</a></li>
-						  <li><a href="#">Pengertian Lingaran</a></li>
-						  <li><a href="#">Contoh Latihan</a></li>
-						  <li><a href="#">Latihan Soal</a></li>
-						  <li><a href="#">Lingkaran</a></li>
-						  <li><a href="#">Video Tentang Lingkaran</a></li>
+						  <li><a href="#unsurling">Unsur-unsur Lingkaran</a></li>
+						  <li><a href="#kelling">Keliling Lingkaran</a></li>
+						  <li><a href="#luasling">Luas Lingkaran</a></li>
+
 						</ul>
 					  </div><!--/.well -->
 					</div>
 					
 					<div class="col-md-9">
 						<div id="whywhy">
-							<p>
-								 aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf 
+							<h2 id="unsurling">Unsur-unsur Lingakaran</h2>
+							<table class="table">
+								<tbody>
+									<tr class="inform">
+										<td><img src="pictmodul/lingk1.png" alt="lingkaran1" /></td>
+										<td>Jika kamu
+										berjalan searah putaran jarum jam dari titik
+										A menelusuri lingkaran dan kembali ke titik
+										A, maka panjang lintasan yang dilalui itu
+										dinamakan <strong>keliling lingkaran (K).</strong></td>
+									</tr>
+									<tr class="inway">
+										<td><img src="pictmodul/lingk2.png" alt="lingkaran2" /></td>
+										<td><p><strong>Sudut
+										pusat</strong> adalah sudut di dalam lingkaran yang
+										titik sudutnya adalah titik pusat lingkaran.
+										∠APB adalah sudut pusat lingkaran. Gambar
+										lah sudut pusat yang lain. Ada berapa sudut
+										pusat yang dapat kamu gambar?</p>
+										<p>ABadalah <strong>tali busur lingkaran.</strong> Gambarlah
+										tali busur yang lain. Ada berapa tali busur
+										yang dapat kamu buat? Sebutkan dengan
+										kata-katamu sendiri pengertian tali busur!</p>
+										</td>
+									</tr>
+									<tr class="warn">
+										<td><img src="pictmodul/lingk3.png" alt="" /></td>
+										<td>Garis lengkung ADC disebut <strong>busur panjang</strong>
+										atau <strong>busur besar</strong> dan ditulis ADC. Apakah
+										ciri suatu busur panjang? Sedangkan garis
+										lengkung ABC disebut <strong>busur pendek</strong> atau
+										<strong>busur kecil</strong> dan ditulis ABC atau AC saja.
+										Apakah ciri suatu busur pendek? Tulislah
+										dua busur panjang dan dua busur pendek
+										yang lain.
+										Selanjutnya jika disebut <strong>busur</strong> AC maka yang
+										dimaksud adalah busur pendek AC.</td>
+									</tr>
+									<tr class="dangerss">
+										<td><img src="pictmodul/lingk4.png" alt="lingkaran4" /></td>
+										<td>Jika ABdiameter lingkaran maka AB disebut
+										busur setengah lingkaran. Ada berapa busur
+										setengah lingkaran yang dapat kamu buat?
+										Coba gambar busur setengah lingkaran yang
+										lain.</td>
+									</tr>
+								</tbody>
+							</table>
+							<br /><br />
+							<h2 id="kelling">Keliling Lingkaran</h2>
+							<p style="border: 1px solid blue; padding: 10px;"><strong>Dengan kata-kata:</strong> Keliling sebuah lingkaran sama dengan &pi; dikalikan dengan diamter lingkaran atau 2&pi; dikalikan dengan jari-jari lingkaran. <br />
+							<strong>Secara simbolik: </strong> Jika suatu lingkaran berjari-jari r, dan diamter lingkaran <em>d</em>, maka keliling lingkarn adalah: <strong>K = 2&pi;r = &pi;d</strong>
 							</p>
+							
+							<h2 id="luasling">Luas Lingkaran</h2>
+							<p style="border: 1px solid purple; padding: 10px;"><strong>Dengan kata-kata:</strong> Luas sebuah daerah lingkaran
+							(yang seterusnya disebut luas lingkaran) sama dengan
+							πdikalikan dengan kuadrat dari panjang jari-jari
+							lingkaran itu.<br />
+							<strong>Secara simbolik:</strong> Jika suatu lingkaran berjari-jari r,
+							maka luas lingkaran itu, L = &pi;r<sup>2</sup></p>
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
