Js Soal Bilangan Bulat

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 						  <li><a href="#banbul">Membandingkan & Mengurutkan Bilangan Bulat</a></li>
 						  <li><a href="#opbilbul">Operasi Bilangan Bulat</a></li>
                           <li><a href="#operasihitung">Sifat Operasi Hitung Bilangan Bulat</a></li>
+						   <li><a href="#soalbilbul">Soal Latihan</a></li>
 						</ul>
 					  </div><!--/.well -->
 					</div>
@@ -272,7 +273,30 @@
                             &nbsp;&nbsp;&nbsp; c. 5 x (8 &#8211; 4) = 5 x 4 = 20 
                             <br />
                             &nbsp; <br />
+							<script language="javascript">
+function hasil()
+{
+	var jlh=0;
+	
+	if(document.getElementById("a").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("b").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("c").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("d").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("e").checked==true){
+	jlh++;}
+	
+	return document.chek.skor.value=jlh;
+}	
 						</div>
+						
 						<div class="komen">
 							<hr class="featurette-divider garis">
 							<fb:comments-count href=http://amatirr.tk/#bilanganbulat></fb:comments-count> komentar 
