--- a/index.html
+++ b/index.html
@@ -295,6 +295,40 @@ function hasil()
 	
 	return document.chek.skor.value=jlh;
 }	
+</script>
+<div class="soal">
+						<form name="chek" method="post">
+		<div>
+			<h3 id="soalbilbul">Soal Latihan</h3>
+			<pre>
+			<h4>1. Hasil dari 128:(-8) = ...
+	<input type="radio" name="satu" value="d" >14      </input> <input type="radio" name="satu" id="a">-14</input>
+	<input type="radio" name="satu" value="b">12      </input> <input type="radio" name="satu" value="d">-12</input>
+			
+			<br>2. Hasil dari -72:(-6) = ...
+	<input type="radio" name="dua" value="a">8      </input> <input type="radio" name="dua" value="c">-11</input>
+	<input type="radio" name="dua" value="b">9      </input> <input type="radio" name="dua" id="b">12</input>
+			
+			<br>3. Tentukan Nilai m dari  m x (-7) = ...
+	<input type="radio" name="tiga" value="a">12      </input> <input type="radio" name="tiga" value="c">-12</input>
+	<input type="radio" name="tiga" value="b">13      </input> <input type="radio" name="tiga" id="c">-13</input>
+			
+			<br>4. jika a=3,b=-2, dan c=4
+			<br>   Tentukan Nilai dari (b+c)/a = ...
+	<input type="radio" name="empat" id="d">2/3      </input> <input type="radio" name="empat" value="c">1/2</input>
+	<input type="radio" name="empat" value="b">4/3      </input> <input type="radio" name="empat" value="d">-2/3</input>
+			
+			<br>5. berdasarkan soal nomor 4
+			<br>   Tentukan Nilai dari (b-c+a)/a = ...
+	<input type="radio" name="lima" value="a">1       </input> <input type="radio" name="lima" value="c">2</input>
+	<input type="radio" name="lima" id="e">-1      </input> <input type="radio" name="lima" value="d">-2</input>
+			</h4>
+			</pre>
+			<input type="button" onClick="hasil()"  value="Check">  <input type="reset" value="reset">
+			Score : <input type="text" disabled name="skor" size="3" >
+		</div>
+	</form>
+						</div>
 						</div>
 						
 						<div class="komen">
