--- a/index.html
+++ b/index.html
@@ -431,6 +431,30 @@ function hasil()
 							lingkaran itu.<br />
 							<strong>Secara simbolik:</strong> Jika suatu lingkaran berjari-jari r,
 							maka luas lingkaran itu, L = &pi;r<sup>2</sup></p>
+							
+							<script language="javascript">
+function hasil1()
+{
+	var jlh=0;
+	
+	if(document.getElementById("14").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("132").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("154").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("77").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("44").checked==true){
+	jlh++;}
+	
+	return document.chek1.skor1.value=jlh;
+}
+</script>
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
