--- a/index.html
+++ b/index.html
@@ -732,6 +732,7 @@ function hasil2()
 						  <li><a href="#statistik">Percobaan Statistika, Titik Sampel, Ruang Sampel, dan Kejadian</a></li>
 						  <li><a href="#contohpel">Contoh Peluang</a></li>
 						  <li><a href="#peltik">Peluang dengan Tiap Titik Sampel Berkesempatan Sama untuk Terjadi</a></li>
+						  <li><a href="#soalpel">Soal Latihan</a></li>
 						</ul>
 					  </div><!--/.well -->
 					</div>
